Just testing things out

--- a/index.html
+++ b/index.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-
-
-
-
-
-</head>
-
 <body>
 
 Welcome to my beautiful website <br/>
 Stay tuned for the great unveiling <br/>
 
-This is a test. <br/>
-
-
-
-
-
-
-
-
+I'm running out of test phrases to use
 
 
 
